<resources>
    <string name="app_name">Coreader</string>
    <string name="prompt_paragraph">Read along with me!</string>
    <string name="label_upload">Upload PDF</string>
    <string name="label_ready">Ready</string>
    <string name="label_start">Start co-reading</string>
    <string name="set_ready_failed">Set ready failed</string>
    <string name="upload_pdf">Please upload a PDF first</string>
    <string name="title_send">Send</string>
    <string name="disclosure_text">
        <![CDATA[
<p><strong>Secure Connection and Privacy Assurance</strong></p>
<p>Techducat Limited is committed to safeguarding your privacy on the
&quot;6°&quot; mobile application (the &quot;App&quot;). We want to
ensure that you have all the necessary information about how we
protect your privacy.</p>
<p><strong>1. Secure Connection:</strong> When you use the App, your
connection to our relay server at <a href="https://18.222.150.108:3001/" target="_new">https://18.222.150.108:3001</a>
is secured through HTTPS. This ensures that your data is transmitted
securely over the network, enhancing your privacy and data
protection.</p>
<p><strong>2. Unique Identifier:</strong> We assign you a unique
identifier on the peer-to-peer network, created using SHA-256
encryption, which generates a 64-character string that cannot be
reversed (decrypted). This identifier serves as your identity on the
network and is kept secure.</p>
<p><strong>3. Contact List:</strong> We encrypt your contact list using SHA-256
encryption, which generates a list of 64-character strings that cannot be
reversed (decrypted) just like your own identifier. These identifiers serve as
the identities of your peers on the network and are shared with other peers by
sending to the relay server at <a href="https://18.222.150.108:3001/" target="_new">https://18.222.150.108:3001</a> through an HTTP connection.</p>
<p><strong>4. Contact List Usage:</strong>The encrypted identifiers derived from the Contact List
serve as the identities of your peers on the network and are shared with other
peers by sending them to the relay server at <a href="https://18.222.150.108:3001/" target="_new">https://18.222.150.108:3001</a>
through an HTTP connection.</p>
<p><strong>5. Privacy Assurance:</strong> We take your privacy
seriously. We do not disclose your unique identifier (SHA-256 string)
to any third parties, as it is designed to be unrecoverable. Your
identity remains secure and anonymous on our network.</p>
<p><strong>6. Minimal Information:</strong> The only required
information for using the App is your cellphone number, which is
solely used for creating your unique identifier. We collect minimal
personal information, and we do not intentionally collect any
additional personal information from children under 13. The App is
available for users of all ages.</p>
<p><strong>7. Security Measures:</strong> We have implemented robust
security measures to protect your information, including your unique
identifier. The use of HTTPS ensures that your data is encrypted
during transmission, maintaining the security and anonymity of your
identity on our network.</p>
<p><strong>8. Changes to Our Policies:</strong> We may update our
policies to reflect changes in our practices or for other reasons.
You will be notified of any material changes through the App.</p>
<p><strong>Location-Based Features</strong></p>
<p>The &quot;6°&quot; app by Techducat Limited includes
location-based features to enhance your experience. Here\'s what you
need to know:</p>
<p><strong>1. GPS Location:</strong> We may collect your GPS location
data to compute the distance to resources, such as skills or
listings, that may interest you. This allows us to provide you with
more relevant and personalized content.</p>
<p><strong>2. User Consent:</strong> Your GPS location data is
collected only with your explicit consent. You can control the access
to your location data through your device settings.</p>
<p><strong>3. Privacy Assurance:</strong> We take your privacy
seriously. Your location data is used solely for enhancing your
experience within the app. We do not share this data with third
parties without your consent.</p>
<p><strong>4. Opt-Out:</strong> If you prefer not to share your GPS
location, you can opt-out at any time through the app\'s settings.</p>
<p>By continuing to use the app, you agree to the collection and use
of your GPS location data as described above. For more details,
please read our full Privacy Policy.</p>
<p><br/>
<br/>
</p>
<p>If you have any questions or concerns about your privacy, data
security, or how we handle your information, please contact us at
niyid@techducat.com.</p>
<p>By continuing to use the App, you agree to the practices outlined
in this Prominent Disclosure and our Privacy Policy.</p>
        ]]>
    </string>
    <string name="privacy_policy_text">
<![CDATA[
<p>Last Updated: 26/09/2023</p>
<p>Techducat Limited (&quot;we,&quot; &quot;us,&quot; or &quot;our&quot;)
is committed to protecting your privacy. This Privacy Policy explains
how we collect, use, disclose, and safeguard your personal
information when you use the &quot;6°&quot; mobile application (the
&quot;App&quot;) and connect to our relay server at
<a href="https://18.222.150.108:3001/" target="_new">https://18.222.150.108:3001</a>
(the &quot;Relay Server&quot;).</p>
<p>Please take a moment to read this Privacy Policy carefully. By
accessing or using the App and Relay Server, you agree to the
practices described in this Privacy Policy. If you do not agree with
the terms of this Privacy Policy, please do not use the App or Relay
Server.</p>
<p><strong>1. Information We Collect</strong></p>
<p>1.1. <strong>Information You Provide:</strong> When you use the
App, you may provide us with certain information, including but not
limited to:</p>
<ul>
	<li><p style="margin-bottom: 0cm">Your cellphone number, which
	serves as your unique identifier on the network.</p>
	<li><p>Published skills or content you share through the App.</p>
</ul>
<p>1.2. <strong>Identity Encryption:</strong> We create a unique
identity for you on the peer-to-peer network using a SHA-256
encrypted 64-character string. This string is designed to be
irreversible (unrecoverable) and is used to maintain your anonymity
on the network.</p>
<p>1.3. <strong>Contact List (of phone numbers):</strong> Your list of
contacts are SHA-256 encrypted and shared with your peers on the network
 through the relay server at https://18.222.150.108:3001/ This relay server
 ensures that you stay connected to your peers whom are also your phone
 using the app (those are the only possible peers).</p>
<p><strong>2. How We Use Your Information</strong></p>
<p>We may use the information we collect for various purposes,
including:</p>
<ul>
	<li><p style="margin-bottom: 0cm">To provide and improve the App and
	Relay Server.</p>
	<li><p style="margin-bottom: 0cm">To facilitate peer-to-peer
	communication.</p>
	<li><p style="margin-bottom: 0cm">To respond to your requests and
	inquiries.</p>
	<li><p style="margin-bottom: 0cm">To ensure the security and
	integrity of our services.</p>
	<li><p>To comply with legal obligations.</p>
</ul>
<p><strong>3. Disclosure of Your Information</strong></p>
<p>We do not disclose your unique identity (SHA-256 encrypted string)
to any third parties, as it is designed to be unrecoverable. However,
we may share your published skills or content with other users on the
peer-to-peer network as part of the App\'s functionality.</p>
<p><strong>4. Security</strong></p>
<p>We take reasonable measures to protect your information, including
your unique identity, from unauthorized access and disclosure. The
SHA-256 encryption is designed to maintain the security of your
identity.</p>
<p><strong>5. Children\'s Privacy</strong></p>
<p>The App is available for use by children under the age of 13. We
collect minimal personal information, and we do not intentionally
collect any additional personal information from children under 13.
We encourage parents or guardians to review their child\'s use of the
App.</p>
<p><strong>6. Changes to this Privacy Policy</strong></p>
<p>We may update this Privacy Policy from time to time to reflect
changes in our practices or for other operational, legal, or
regulatory reasons. We will notify you of any material changes by
posting the updated Privacy Policy on our website or within the App.</p>
<p><strong>7. Contact Us</strong></p>
<p>If you have any questions or concerns about this Privacy Policy or
our data practices, please contact us at niyid@techducat.com.</p>
]]>
    </string>
    <string name="accept_privacy_policy">You must accept the privacy policy by checking the box above.</string>
    <string name="cellphone">Cellphone</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="prominent_disclosure">Prominent Disclosure</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="accept_policy">I accept the policy</string>
    <string name="title_notification_name">Co-reader Message Channel</string>
    <string name="title_notification_description">Channel for receiving messages</string>
    <string name="title_notification">Co-reader activity</string>
    <string name="notification_sent">Incident sent</string>
    <string name="notification_prompt">Tell us what you see</string>
    <string name="service_channel_name">Co-reader Service</string>
    <string name="service_channel_content">Co-reader service running in background</string>
    <string name="file_upload_failed">File upload failed</string>
    <string name="ok">OK</string>
    <string name="telephone_description">Telephone</string>
    <string name="start_button_description">Start</string>
    <string name="ready_button_description">Ready</string>
    <string name="camera_button_description">File</string>
    <string name="new_button_description">New</string>
    <string name="session_title">Session Title</string>
    <string name="enter_session_title">Enter session title</string>
    <string name="file_button_description">File upload</string>
    <string name="save_button_description">Save session</string>
    <string name="create_session">Create New Session</string>
    <string name="create">Create</string>
    <string name="paragraph">Paragraph:</string>
    <string name="page">Page:</string>
    <string name="ready">Ready button</string>
    <string name="create_session_error">Ensure you enter a title and upload a PDF doc</string>
    <string name="pageIndex">%d</string>
    <string name="paragraphIndex">%d</string>
    <string name="pageLabel">page</string>
    <string name="paragraphLabel">paragraph</string>
    <string name="session_update">Turned to page %d</string>
    <string name="readerCountLabel">Readers</string>
    <string name="readers_update">%d readers remaining</string>
    <string name="paragraph_icon_description">Paragraph</string>
    <string name="page_icon_description">Page</string>
    <string name="readers_icon_description">Readers</string>
    <string name="book_completed">Book reading complete!</string>
    <string name="page_text_content_description">An entire page of this book</string>

</resources>