<!-- dialog_privacy_policy.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prominent_disclosure"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/disclosureTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoLink="web"
        android:maxLines="20"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:fadeScrollbars="false"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>
